--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.AndroidExample1"
         tools:targetApi="31">
         <activity
+            android:name=".FirstApp.ResultActivity"
+            android:exported="false"
+            android:label="@string/title_activity_result"
+            android:theme="@style/Theme.AndroidExample1" />
+        <activity
             android:name=".FirstApp.FirstActivity"
             android:exported="true">
             <intent-filter>
