--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
         android:theme="@style/Theme.AndroidExample1"
         tools:targetApi="31">
         <activity
+            android:name=".ImcAppCalculator.ResultImcActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ImcAppCalculator.ImcCalculatorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MenuActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".FirstApp.ResultActivity"
             android:exported="false"
             android:label="@string/title_activity_result"
