--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.AndroidExample1"
         tools:targetApi="31">
         <activity
+            android:theme="@style/Theme.ToDo"
+            android:name=".ToDoApp.ToDoActivity"
+            android:exported="false" />
+        <activity
             android:name=".ImcAppCalculator.ResultImcActivity"
             android:exported="false" />
         <activity
