--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,9 +15,15 @@
         android:theme="@style/Theme.AndroidExample1"
         tools:targetApi="31">
         <activity
-            android:theme="@style/Theme.ToDo"
-            android:name=".ToDoApp.ToDoActivity"
+            android:name=".superHeroApp.DetailSuperheroeActivity"
             android:exported="false" />
+        <activity
+            android:name=".superHeroApp.superHeroListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ToDoApp.ToDoActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ToDo" />
         <activity
             android:name=".ImcAppCalculator.ResultImcActivity"
             android:exported="false" />
