--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.AndroidExample1"
         tools:targetApi="31">
         <activity
+            android:name=".Settings.SettingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".superHeroApp.DetailSuperheroeActivity"
             android:exported="false" />
         <activity
